# pulumi-provider-slash

./: .golangci.yml  .goreleaser.darwin.yml  .goreleaser.yml  Makefile  pyproject.toml
.github/workflows/: manual.yml  push.yml  release.yml
deployment-templates/: README-DEPLOYMENT.md
provider/: go.mod  go.sum
provider/cmd/pulumi-gen-slash/: _openapi.yml  main.go  openapi.yml
provider/cmd/pulumi-resource-slash/: main.go  metadata.json  openapi_generated.yml  schema.json
pulumi/: Pulumi.yaml  index.ts  o.yaml  package.json  pyproject.toml
sdk/nodejs/: README.md  index.ts  package.json  provider.ts  tsconfig.json  utilities.ts
sdk/python/: README.md  pyproject.toml
sdk/python/pulumi_slash/: __init__.py  _utilities.py  provider.py
sdk/python/pulumi_slash/api/: __init__.py  _enums.py  _inputs.py  collection_service_collection.py  get_collection_service_collection.py  get_shortcut_service_shortcut.py  get_shortcut_service_shortcut_analytic.py  get_user_service_user.py  get_user_setting_service_user_setting.py  get_workspace_service_workspace_profile.py  get_workspace_service_workspace_setting.py  list_collection_service_collections.py  list_shortcut_service_shortcuts.py  list_user_service_user_access_tokens.py  list_user_service_users.py  outputs.py  shortcut_service_shortcut.py  user_service_user.py  user_service_user_access_token.py
sdk/python/pulumi_slash/config/: vars.py
sdk/python/pulumi_slash/subscription/: __init__.py
sdk/python/pulumi_slash/subscription/v1/: __init__.py  _enums.py  get_subscription_service_subscription.py  outputs.py
(+53 files in other folders)
