[project]
  name = "pulumi_slash"
  description = "A Pulumi package for creating and managing Slash resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "slash", "category/cloud", "kind/native"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://cloudysky.software"
    Repository = "https://github.com/dddd4cloud/pulumi-provider-slash"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_slash = ["py.typed", "pulumi-plugin.json"]
